<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:src="@drawable/main_pic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/app_name"
            android:textSize="40sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/now_playing"
            style="@style/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_play"
            android:text="@string/button_now" />

        <Button
            android:id="@+id/my_music"
            style="@style/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_list"
            android:text="@string/button_library" />


        <Button
            android:id="@+id/buy_music"
            style="@style/Buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_store"
            android:text="@string/button_buy" />

    </LinearLayout>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                        android:id="@+id/card_view"
                                        style="@style/CardviewExplanation"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        card_view:cardCornerRadius="4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/text_explanation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_activity" />
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>